platform/trivy-system/trivy/resources/trivy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    app.kubernetes.io/instance: trivy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trivy
    app.kubernetes.io/version: 0.30.4
    argocd.argoproj.io/instance: trivy
    helm.sh/chart: trivy-0.4.17
  name: trivy
  namespace: trivy-system
spec:
  ingressClassName: nginx
  rules:
    - host: trivy.local.tecno-fly.com
      http:
        paths:
          - backend:
              service:
                name: trivy
                port: 
                  number: 4954
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - trivy.local.tecno-fly.com
      secretName: trivy-tls
